--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   image_picker: ^1.0.0
   shared_preferences: ^2.2.2
+  overlay_support: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
